Prevent small images and figures from overflowing frame

--- a/css/custom/custom-other.less
+++ b/css/custom/custom-other.less
@@ -369,6 +369,7 @@ ul.vert-center {   // For centering text within ul li
 .figure-sm {
 	display: inline-block;
 	width: 100%;
+	max-width: 100%;
 	min-height: 150px;
 	overflow: hidden;
 	border-radius: 2px;
